# HarnessGenerator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HELPER.md  README.md  pyproject.toml
.github/workflows/: test-and-eval.yml
app/: __init__.py  workspaces.py
app/adapters/: __init__.py  base.py  registry.py  simple_qa.py  youtube_speaker_attribution.py
app/bootstrap/: __init__.py  contracts.py  readiness.py
app/calibration/: __init__.py  seed_gold.py
app/harness/: __init__.py  config.py  models.py  runner.py
app/harness_optimizer/: __init__.py  candidates.py  (+2 more)
bootstrap/: dataset_manifest.yaml  domain_contract.yaml  output_contract.yaml  strategy_space.yaml  tool_registry.yaml
docs/: README.md  architecture.md  codex_workflow.md  data_contracts.md  evaluation-protocol.md  failure_modes.md  harness_optimization_space.md  product-requirements.md  project_boundaries.md  registry_design.md  research-notes.md  resolver_strategies.md  roadmap.md  security-and-safety.md  task-family-youtube-speaker-attribution.md  workspace_layout.md
evals/: check_regression.py  compare_strategies.py  dataset.py  metrics.py  reports.py  run_eval.py
tests/: test_candidate_proposals.py  test_compare_generated.py  test_compare_strategies.py  test_contracts.py  test_deepgram.py  test_draft_cases.py  test_eval_runner.py  test_harness_runner.py  test_media_prepare.py  test_next_task.py  test_openai_diarized.py  test_seed_gold.py  test_task_adapters.py  test_workspace_history.py  test_workspace_loops.py  test_workspace_readiness.py  test_youtube_seed.py
workspaces/: AGENTS.template.md
(+181 files in other folders)
